--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   File::Object: 0.07
   Test::More: 0
   Test::NoWarnings: 0
+  Test::Output: 1.02
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
