--- a/META.yml
+++ b/META.yml
@@ -8,14 +8,14 @@ build_requires:
   File::Object: 0.07
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Output: 1.02
+  Test::Output: '1.02'
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.08'
+generated_by: 'Module::Install version 1.14'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -35,4 +35,4 @@ resources:
   homepage: https://github.com/tupinek/PYX-Sort
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/PYX-Sort
-version: 0.01
+version: '0.01'
