--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: TODO
+abstract: 'Processing PYX data or file and sort element attributes.'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
