--- a/META.yml
+++ b/META.yml
@@ -31,7 +31,7 @@ requires:
   PYX::Parser: 0.03
   perl: 5.6.0
 resources:
-  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-Sort
+  bugtracker: https://github.com/michal-josef-spacek/PYX-Sort/issues
   homepage: https://github.com/michal-josef-spacek/PYX-Sort
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/michal-josef-spacek/PYX-Sort
